# Webster

./: .gitignore  README.md  setup.cfg  valid_dict.py  webster.py
webster/: __init__.py
