[metadata]
name = Webster
summary = Webster is a self validating dict object for python.
description-file = README.MD
author = David Lenwell
author-email = dlenwell@gmail.com
home-page = http://www.davidlenwell.com/
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3

[files]
packages = Webster

[global]
setup-hooks = pbr.hooks.setup_hook

